# rust-spreadsheet

./: .gitignore  Cargo.toml  Makefile  README.md  report.tex
.github/workflows/: rust.yml
src/: main.rs
src/utils/: display.rs  input.rs  mod.rs  operations.rs  toposort.rs
src/utils/ui/: gui.rs  loadnsave.rs  mod.rs  plot.rs  stats.rs  ui.rs
