[package]
name = "rust_spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
eframe = "0.31.1"
egui = "0.31.1"
chrono = "0.4.26"
egui_extras = {version = "0.31.1", features = ["all_loaders"] }
image = {version = "0.25.6", features = ["jpeg", "png"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rfd = "0.15.3"
csv = "1.3.1"
notify-rust = "4.11.7"
plotters = "0.3.7"
lazy_static = "1.5.0"
once_cell = "1.21.3"
genpdf = "0.2.0"
